# toy-language

./: Cargo.toml  README.md  TODO.md  debug_parser.sh
src/: error.rs  lib.rs  main.rs
src/ast_parser/: grammar.rs  mod.rs  types.rs
src/codegen/: block.rs  codegen.rs  context.rs  expression_generator.rs  mod.rs  options.rs  semantic_assert.rs  types.rs  vars.rs
src/compiler/: backend.rs  codegen.rs  context.rs  expression_evaluator.rs  expression_generator.rs  frontend.rs  mod.rs  options.rs  scope.rs  variable_map.rs
src/diagnostic/: mod.rs
src/lang/: README.md  complex.txt  enum.txt  fizzbuzz.txt  range.txt  struct.txt  test.txt  test_condensed_if.txt  test_if_expression.txt  test_new.txt  test_one_line.txt  test_pattern_match.txt
src/parser/: ast.rs  definition.rs  expression.rs  function.rs  grammar.rs  identifier.rs  literal.rs  literals.rs  mod.rs  pattern_match.rs  scope.rs  source_range.rs  statement.rs  struct.rs  types.rs  variable.rs
src/semantic/: diagnostic.rs  error_checker.rs  expression.rs  function.rs  mod.rs  scope.rs  scope_tracker.rs  semantic.rs  statement.rs  struct.rs
