[package]
name = "cranelift-toy-langauge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
codespan-reporting = "0.11"
cranelift = "0.114"
cranelift-jit = "0.114"
cranelift-module = "0.114"
cranelift-native = "0.114"
cranelift-object = "0.114"
peg = "0.8"
thiserror = "2.0"
